--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "html-webpack-plugin": "^2.30.1",
     "mocha": "^4.0.1",
     "sinon": "^4.1.2",
     "webpack": "^3.8.1",
