--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A boilerplate React app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.config.js",
-    "build": "webpack --config config/webpack.config.js",
+    "start": "webpack-dev-server --config config/webpack.config.dev.js",
+    "build": "webpack --config config/webpack.config.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matt Wilson",
@@ -25,6 +25,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "clean-webpack-plugin": "^0.1.17",
     "enzyme": "^3.2.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -35,6 +36,7 @@
     "mocha": "^4.0.1",
     "sinon": "^4.1.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "webpack-merge": "^4.1.1"
   }
 }
