--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -26,6 +27,8 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
     "enzyme": "^3.2.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
@@ -33,8 +36,12 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "^4.0.1",
+    "node-sass": "^4.6.1",
+    "postcss-loader": "^2.0.8",
+    "sass-loader": "^6.0.6",
     "sinon": "^4.1.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
