--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sinon": "^4.1.2",
     "stylelint": "^8.3.1",
     "stylelint-webpack-plugin": "^0.9.0",
+    "svg-sprite-loader": "^3.5.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
     "webpack-merge": "^4.1.1"
